# common_api_bazel

./: .bazelrc  MODULE.bazel  commonapi_repository.bzl
bazel/: commonapi.bzl  commonapi_repository.bzl
fidl/: BUILD  HelloWorld.fdepl  HelloWorld.fidl
src/: BUILD.bazel  HelloWorldClient.cpp  HelloWorldService.cpp  HelloWorldStubImpl.cpp  HelloWorldStubImpl.hpp  commonapi4someip.ini
